# Hypodermic

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
Hypodermic/: ActivatedRegistrationInfo.h  ActivationHandler.h  ActivationHandlers.h  ActivationRegistry.h  ActivationResult.h  AnyArgument.h  ArgumentResolver.h  AsSelf.h  AutowireableConstructor.h  Behavior.h  CMakeLists.txt  ComponentContext.h  Config.h  ConsoleLoggerSink.h  ConstructorDescriptor.h  ConstructorTypologyDeducer.h  Container.h  ContainerBuilder.h  DependencyFactories.h  DependencyFactory.h  EnforceBaseOf.h  ExceptionBase.h  FactoryWrapper.h  HypodermicExport.h  ILoggerSink.h  IMutableRegistrationScope.h  IRegistrationActivator.h  IRegistrationDescriptor.h  IRegistrationRegistry.h  IRegistrationScope.h  IResolutionContainer.h  IResolutionContext.h  IRuntimeRegistrationBuilder.h  ITypeAlias.h  InstanceFactory.h  InstanceLifetime.h  IsComplete.h  IsSupportedArgument.h  Log.h  LogLevel.h  (+24 more)
Hypodermic.Tests/: CMakeLists.txt  ClearAlignedInstanceCacheTests.cpp
